# doughnut-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE_TEMPLATE  README.md  clippy.toml  index.js  payload.0
.circleci/: config.yml
.github/actions/: install-deps.yml
.github/actions/install-wasm-dependencies/: action.yml
.github/workflows/: cd-js.yml  cd-rs.yml  ci.yml
js/: .editorconfig  .eslintrc.json  .gitignore  .npmignore  Cargo.toml  README.md  build.sh  index.js  package.json  pnpm-lock.yaml  webpack.config.js
js/examples/frontend/: README.md  index.js  index.template.html  package.json  webpack.config.js
js/examples/webpack4/: .gitignore  README.md  index.js  package.json  webpack.config.js
js/examples/webpack5/: .gitignore  README.md  index.js  package.json  webpack.config.js
js/package/: README.md
js/src/: lib.rs
js/src/topping/: mod.rs
js/src/trnnut/: mod.rs
js/test/: doughnut.spec.js  nodeImportWorks.js  topping.spec.js  trnnut.spec.js
src/: TODO.md  doughnut.rs  error.rs  lib.rs  main.rs  signature.rs  test.rs  traits.rs
src/doughnut/: mod.rs  shim.rs  tests.rs  v0.rs  v1.rs
src/doughnut/topping/: method.rs  mod.rs  module.rs  tests.rs  topping.rs  validation.rs
src/doughnut/trnnut/: method.rs  mod.rs  module.rs  tests.rs  trnnut.rs  validation.rs
src/signature/: mod.rs
src/traits/: impls.rs  mod.rs  tests.rs  verify.rs
src/v0/: decode-v1.rs  encode.rs  mod.rs  parity.rs  shim.rs
src/v1/: mod.rs
