[package]
name = "doughnut-rs"
version = "0.1.0"
authors = ["The Root Network Team"]
edition = "2021"
description = "The official rust doughnut codec"
license = "UNLICENSED"
repository = "https://github.com/futureversecom/trn-doughnut-rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false, features = ["derive", "alloc"] }
primitive-types = { version = "0.12.2", default-features = false }
schnorrkel = { version = "0.11.4", default-features = false, optional = true }
ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"], optional = true }
libsecp256k1 = { version = "0.7", default-features = false, optional = true, features = [ "hmac", "static-context" ] }
blake2 = { version = "0.10.6", default-features = false, optional = true }
digest = { version = "0.10.3", default-features = false }
sha3 = { version = "0.10.8", default-features = false, optional = true }

# including this to fix C build issues in consumer crates
# 'No available targets are compatible with this triple.'
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }

pact = { git = "https://github.com/futureversecom/trn-pact", branch = "feat/wasm-pack", default-features = false }
# pact = { path = "../trn-pact/", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5" }
rand_core = { version = "0.5.1", features = ["alloc"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30"}

[features]
default = ["std"]
std = [
    "codec/std",
    "pact/std",
    "serde/std",
    "crypto",
    "ed25519-dalek/std",
    "schnorrkel/std",
    "digest/std"
]
# enable cryptographic signing and verification features in 'no std'
crypto = [
    "libsecp256k1",
    "ed25519-dalek",
    "schnorrkel",
    "blake2",
    "sha3"
]
