[package]
name = "js"
version = "0.0.2"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"
description = "JS/Wasm bindings for the rust Doughnut codec"
license = "UNLICENSED"
repository = "https://github.com/cennznet/doughnut-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
doughnut_rs = { path = "../", features = ["wasm"] }
wasm-bindgen = "0.2.64"
clear_on_drop = { version = "0.2.4", features = ["no_cc"] }
codec = { package = "parity-scale-codec", version = "1.3.1", features = ["derive"] }

[profile.release]
# disable loop vectorization for smaller wasm
opt-level = "s"
# disable parallel compilation
codegen-units = 1
lto = true

