[package]
name = "doughnut-js"
version = "0.1.0"
authors = ["The Root Network Team"]
edition = "2021"
description = "JS/Wasm bindings for the rust Doughnut codec"
license = "UNLICENSED"
repository = "https://github.com/futureversecom/trn-doughnut-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
doughnut-rs = { path = "../", default-features = false, features = ["crypto", "wasm32"] }
wasm-bindgen = "0.2.89"
clear_on_drop = { version = "0.2.5", features = ["no_cc"] }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
console_error_panic_hook = "0.1"

[profile.release]
# disable loop vectorization for smaller wasm
opt-level = "z"
# disable parallel compilation
codegen-units = 1
lto = true
